
------------------------------
       Version 5.2.1
------------------------------

  . DrRacket no longer shows a stacktrace for syntax errors in the REPL.

------------------------------
        Version 5.2
------------------------------

  . changed three menu keybidings:
      "New Tab" is now <menukey>-t
      "Run" is now <menukey>-r
      "Replace" is now <menukey>-shift-f

    The Keyboard Shortcuts section in the manual has a sample
    keybindings file a checkbox that restores the old behavior of
    the first two.

  . Under Windows, DrRacket now saves files, in some situations,
    with LF terminators. Previously, under windows, all files
    were saved with CRLF terminators. Now, a file is saved with
    CRLF terminators when every line in the file ends with CRLF.
    In there is any one line that ends with just LF, then the
    file is saved with LF's for each line. Also, newly created
    files are also saved with LFs instead of CRLFs.

    There is a preference in the Edit|General preferences panel
    to go back to the behavior of previous versions of DrRacket.

  . added online expansion and check syntax

  . removed the "open here" functionality (both from
    the DrRacket app and from the framework library)

  . 2htdp/image:
     - shrunk the size of saved files that contain 2htdp/image bitmaps
       (you can get these by copying and pasting from the REPL; using
        "insert image" isn't affected)

     - use the pre-multiplied alphas when doing image comparsion

     - sped up rotation and flipping of bitmaps

  . improved the way the scribble-language buttons (render html and
    render pdf) work; they now basically do what 'Run' does, plus the
    extra work of rendering the document; before they had their own error
    handling and sandboxing code, which was less integrated with DrRacket

  . improved the preference handling for the frame's location
    (specifically for the multiple-monitors case)
